k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: myapp-namespace
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
